# unraid-rebalancer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  metrics_storage.py  performance_models.py  pyproject.toml  rebalancer.py  requirements.txt  scheduler.py  test_results.md  unraid_integration.py  unraid_rebalancer.py
artifacts/: atomic_rsync_implementation.py  error_handling_implementation.py  performance_mode_standards.py  progress_reporting_implementation.py  rsync_atomic_operations.py  test_results.md  validation_implementation.py
docs/: monitoring_and_control.md  rsync_improvements.md  scheduling_guide.md
docs/technical/: scheduling_implementation.md
examples/: basic_rebalance.sh
metrics/: rebalancer_metrics.db  rebalancer_metrics.db-shm  rebalancer_metrics.db-wal
tests/: conftest.py  test_adversarial.py  test_basic.py  test_cli.py  test_config.py  test_discovery.py  test_display.py  test_duplicates.py  test_execution.py  test_integration.py  test_models.py  test_performance_metrics.py  test_plandb.py  test_planning.py  test_remote.py  test_scheduler.py  test_signals.py  test_state.py  test_throughput.py
tests/integration/: test_drive_prioritization_integration.py  test_integration_metrics.py  test_rsync_improvements.py  test_schedule_monitoring.py  test_scheduling_workflow.py  test_transfer_state_tracking_integration.py  test_unraid_scheduling.py
tests/unit/: test_cron_integration.py  test_drive_prioritization.py  test_error_recovery.py  test_eta_enhancement.py  test_performance_metrics.py  test_resource_monitoring.py  (+6 more)
(+1 files in other folders)
