[project]
name = "unraid-rebalancer"
version = "0.2.0"
description = "Rebalance data across Unraid disk array drives"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
